fix: headline spacing

--- a/client/src/Card.css
+++ b/client/src/Card.css
@@ -44,8 +44,9 @@
 
 .title {
   font-size: 32px;
-  margin-bottom: 20px;
+  margin: 20px 20px 30px;
 }
+
 .title-with-img {
   font-size: 24px;
 }
